changing DFF_map.v (to support all types of DFF_$$$) produce additional gates and wires, we altered yosys_script (both script_template & make_script func) to re-synthesize after dff mapping

--- a/lib/config.json
+++ b/lib/config.json
@@ -4,6 +4,7 @@
     "yosys_script_premap_v_outputName": "synth_premap.v",
     "yosys_script_premap_blif_outputName": "synth_premap.blif",
     "yosys_script_postmap_v_outputName": "synth_postmap.v",
+    "yosys_script_postmap_json_outputName": "synth_postmap.json",
     "mycells_yosys_lib_fileName": "mycells_yosys.lib",
     
     "Logic_map_fileName": "Logic_map.v",
