--- a/testsuites/fulladder_vhdl/lib/config.json
+++ b/testsuites/fulladder_vhdl/lib/config.json
@@ -18,6 +18,7 @@
     
     "vhdl_netlist_fileName": "vhdl_netlist.vhd",
     "verilog_netlist_fileName": "verilog_netlist.v",
-    "systemC_netlist_fileName": "systemC_netlist.h"
-
+    "systemC_netlist_fileName": "systemC_netlist.h",
+    
+    "fault_list_fileName": "fault_list.flt"
 }
