--- a/testsuites/counter_vhdl_atalanta/lib/config.json
+++ b/testsuites/counter_vhdl_atalanta/lib/config.json
@@ -21,6 +21,7 @@
     "vhdl_netlist_fileName": "vhdl_netlist.vhd",
     "verilog_netlist_fileName": "verilog_netlist.v",
     "systemC_netlist_fileName": "systemC_netlist.h",
+    "systemC_testbench_fileName": "testbench.h",
     
     "fault_list_fileName": "fault_list.flt",
     
