delete notes. it exposed the password for pypi

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ pypi_package/src/utdate/lib/libghw.dylib
 pypi_package/src/utdate/lib/python3.8/
 pypi_package/src/utdate/removed.txt
 pypi_package/src/utdate/share/
+notes/NBGEN_notes.txt
